@@ -50,8 +50,34 @@ Server::Server(uint16_t srv_threads, uint16_t db_connections)
 int Server::run()
 {
     try {
+        // Show ASCII Art
+        std::cout << R"(
+
+__________________________________________________________________________________
+
+
+                          ,--,     ,---,                 ,--,    ,--,
+       ,---.            ,--.'|   ,--.' |               ,--.'|  ,--.'|
+      /__./|            |  | :   |  |  :               |  | :  |  | :
+ ,---.;  ; |            :  : '   :  :  :               :  : '  :  : '
+/___/ \  | |   ,--.--.  |  ' |   :  |  |,--.  ,--.--.  |  ' |  |  ' |     ,--.--.
+\   ;  \ ' |  /       \ '  | |   |  :  '   | /       \ '  | |  '  | |    /       \
+ \   \  \: | .--.  .-. ||  | :   |  |   /' :.--.  .-. ||  | :  |  | :   .--.  .-. |
+  ;   \  ' .  \__\/: . .'  : |__ '  :  | | | \__\/: . .'  : |__'  : |__  \__\/: . .
+   \   \   '  ," .--.; ||  | '.'||  |  ' | : ," .--.; ||  | '.'|  | '.'| ," .--.; |
+    \   `  ; /  /  ,.  |;  :    ;|  :  :_:,'/  /  ,.  |;  :    ;  :    ;/  /  ,.  |
+     :   \ |;  :   .'   \  ,   / |  | ,'   ;  :   .'   \  ,   /|  ,   /;  :   .'   \
+      '---" |  ,     .-./---`-'  `--''     |  ,     .-./---`-'  ---`-' |  ,     .-./
+             `--`---'                       `--`---'                    `--`---'
+
+
+        )" << '\n';
+
+        std::cout << "__________________________________________________________________________________" << "\n\n";
         // Start the server on port %PORT%
-        std::cout << fmt::format("Valhalla server version : {}  is started on port {}.\n", GIT_TAG, PORT);
+        std::cout << fmt::format("Valhalla server version : {}", GIT_TAG) << '\n';
+        std::cout << fmt::format("Valhalla server port    : {}", PORT) << '\n';
+        std::cout << "__________________________________________________________________________________" << "\n\n";
 
         app->loglevel(crow::LogLevel::INFO)
             .use_compression(crow::compression::algorithm::GZIP)
